First Draft of Auto Party Plugin
Auto joins last party as long as the plugin was enabled when a party was joined.

If the plugin is disabled it disables the autojoin for next time it is enabled.

Added logic to ensure that the party plugin is enabled while the auto party plugin is.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=Auto Party
+author=neilrush
+description=Automatically join last party on login
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.autoparty.AutoPartyPlugin
