--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Auto Party
 author=neilrush
 description=Automatically join last party on login
-tags=
+tags=party,automatic,rejoin,group
 plugins=com.autoparty.AutoPartyPlugin
